--- a/leetcode1.ipynb
+++ b/leetcode1.ipynb
@@ -29,7 +29,7 @@
     "        for cnt, num in enumerate(nums):\n",
     "            if target - num in lookup:\n",
     "                return [lookup[target - num], cnt]\n",
-    "            lookup[num] = cnt            "
+    "            lookup[num] = cnt"
    ]
   },
   {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
     }
    ],
    "source": [
-    "print(powerOfTwo(218))"
+    "print(sol.isPowerOfTwo(218))"
    ]
   },
   {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -462,11 +462,567 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reverse integer\n",
+    "Given a 32-bit signed integer, reverse digits of an integer.\n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: 123\n",
+    "\n",
+    "Output: 321\n",
+    "\n",
+    "Example 2:\n",
+    "\n",
+    "Input: -123\n",
+    "\n",
+    "Output: -321\n",
+    "\n",
+    "\n",
+    "Example 3:\n",
+    "\n",
+    "Input: 120\n",
+    "\n",
+    "Output: 21\n",
+    "\n",
+    "Note:\n",
+    "Assume we are dealing with an environment which could only store integers within the 32-bit signed integer range: $−2^{31},  2^{31} − 1$. For the purpose of this problem, assume that your function returns 0 when the reversed integer overflows."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def reverse(self, x):\n",
+    "        maxint = 2147483649\n",
+    "        minint = -2147483648\n",
+    "        ans = int(str(abs(x))[::-1])\n",
+    "        return ans * (abs(x)//x) if minint < ans < maxint and ans else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = Solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "321"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.reverse(123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-123"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.reverse(-321)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.reverse(120)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Palindrome Number\n",
+    "\n",
+    "Determine whether an integer is a palindrome. An integer is a palindrome when it reads the same backward as forward.\n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: 121\n",
+    "\n",
+    "Output: true\n",
+    "\n",
+    "Example 2:\n",
+    "\n",
+    "Input: -121\n",
+    "\n",
+    "Output: false\n",
+    "\n",
+    "Explanation: From left to right, it reads -121. From right to left, it becomes 121-. Therefore it is not a palindrome.\n",
+    "\n",
+    "Example 3:\n",
+    "\n",
+    "Input: 10\n",
+    "\n",
+    "Output: false\n",
+    "\n",
+    "Explanation: Reads 01 from right to left. Therefore it is not a palindrome.\n",
+    "\n",
+    "Follow up:\n",
+    "\n",
+    "Coud you solve it without converting the integer to a string?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#string solution\n",
+    "class Solution:\n",
+    "    def palindrome(self, x):\n",
+    "        return str(x) == str(x)[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = Solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.palindrome(121)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.palindrome(-121)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.palindrome(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# no string conversion\n",
+    "class Solution:\n",
+    "    \n",
+    "    def reverse(self, x):\n",
+    "        rev = 0\n",
+    "        while x > 0:\n",
+    "            end = x%10\n",
+    "            rev = rev *10 + end\n",
+    "            x = x//10\n",
+    "        return rev\n",
+    "    \n",
+    "    def palindrome(self, x):\n",
+    "        return Solution.reverse(self, x) == x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = Solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.palindrome(121)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.palindrome(-121)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.palindrome(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove Duplicates from Sorted Array\n",
+    "Given a sorted array nums, remove the duplicates in-place such that each element appear only once and return the new length.\n",
+    "\n",
+    "Do not allocate extra space for another array, you must do this by modifying the input array in-place with O(1) extra memory.\n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Given nums = [1,1,2],\n",
+    "\n",
+    "Your function should return length = 2, with the first two elements of nums being 1 and 2 respectively.\n",
+    "\n",
+    "It doesn't matter what you leave beyond the returned length.\n",
+    "\n",
+    "Example 2:\n",
+    "\n",
+    "Given nums = [0,0,1,1,1,2,2,3,3,4],\n",
+    "\n",
+    "Your function should return length = 5, with the first five elements of nums being modified to 0, 1, 2, 3, and 4 respectively.\n",
+    "\n",
+    "It doesn't matter what values are set beyond the returned length.\n",
+    "\n",
+    "Clarification:\n",
+    "\n",
+    "Confused why the returned value is an integer but your answer is an array?\n",
+    "\n",
+    "Note that the input array is passed in by reference, which means modification to the input array will be known to the caller as well.\n",
+    "\n",
+    "Internally you can think of this:\n",
+    "\n",
+    "// nums is passed in by reference. (i.e., without making a copy)\n",
+    "int len = removeDuplicates(nums);\n",
+    "\n",
+    "// any modification to nums in your function would be known by the caller.\n",
+    "// using the length returned by your function, it prints the first len elements.\n",
+    "for (int i = 0; i < len; i++) {\n",
+    "    print(nums[i]);\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def removeDuplicates(self, nums):\n",
+    "        for i in range(len(nums)-1, 0, -1):\n",
+    "            if nums[i] == nums[i - 1]:\n",
+    "                del nums[i]\n",
+    "        return len(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = Solution()\n",
+    "given_nums = [1, 1, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.removeDuplicates(given_nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "given_nums = [0,0,1,1,1,2,2,3,3,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.removeDuplicates(given_nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reverse Words in a String\n",
+    "\n",
+    "Given an input string, reverse the string word by word.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: \"the sky is blue\"\n",
+    "\n",
+    "Output: \"blue is sky the\"\n",
+    "\n",
+    "Example 2:\n",
+    "\n",
+    "Input: \"  hello world!  \"\n",
+    "\n",
+    "Output: \"world! hello\"\n",
+    "\n",
+    "Explanation: Your reversed string should not contain leading or trailing spaces.\n",
+    "\n",
+    "Example 3:\n",
+    "\n",
+    "\n",
+    "Input: \"a good   example\"\n",
+    "\n",
+    "Output: \"example good a\"\n",
+    "\n",
+    "Explanation: You need to reduce multiple spaces between two words to a single space in the reversed string.\n",
+    " \n",
+    "\n",
+    "Note:\n",
+    "\n",
+    "A word is defined as a sequence of non-space characters.\n",
+    "Input string may contain leading or trailing spaces. However, your reversed string should not contain leading or trailing spaces.\n",
+    "You need to reduce multiple spaces between two words to a single space in the reversed string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def reverseWords(self, s):\n",
+    "        rs = ''\n",
+    "        for word in reversed(s.split()):\n",
+    "            rs += word + ' '\n",
+    "        rs = rs.rstrip()\n",
+    "        return rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = Solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'blue is sky the'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"the sky is blue\"\n",
+    "sol.reverseWords(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'world! hello'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"  hello world!  \"\n",
+    "sol.reverseWords(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'example good a'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"a good   example\"\n",
+    "sol.reverseWords(s)"
+   ]
   },
   {
    "cell_type": "code",
