--- a/leetcode1.ipynb
+++ b/leetcode1.ipynb
@@ -1025,11 +1025,228 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Fibonacci numbers, commonly denoted F(n) form a sequence, called the Fibonacci sequence, such that each number is the sum of the two preceding ones, starting from 0 and 1. That is,\n",
+    "\n",
+    "F(0) = 0,   F(1) = 1\n",
+    "\n",
+    "F(N) = F(N - 1) + F(N - 2), for N > 1.\n",
+    "\n",
+    "Given N, calculate F(N).\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: 2\n",
+    "\n",
+    "Output: 1\n",
+    "\n",
+    "Explanation: F(2) = F(1) + F(0) = 1 + 0 = 1.\n",
+    "\n",
+    "Example 2:\n",
+    "\n",
+    "Input: 3\n",
+    "\n",
+    "Output: 2\n",
+    "\n",
+    "Explanation: F(3) = F(2) + F(1) = 1 + 1 = 2.\n",
+    "\n",
+    "Example 3:\n",
+    "\n",
+    "Input: 4\n",
+    "\n",
+    "Output: 3\n",
+    "\n",
+    "Explanation: F(4) = F(3) + F(2) = 2 + 1 = 3.\n",
+    " \n",
+    "\n",
+    "Note:\n",
+    "\n",
+    "0 ≤ N ≤ 30."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def fib(self, n):\n",
+    "        a, b = 0, 1\n",
+    "        for i in range(1, n + 1):\n",
+    "            a, b = b, a + b\n",
+    "        return a\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = Solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.fib(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.fib(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.fib(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given an array of strings, group anagrams together.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: [\"eat\", \"tea\", \"tan\", \"ate\", \"nat\", \"bat\"],\n",
+    "\n",
+    "Output:\n",
+    "\n",
+    "[\n",
+    "  [\"ate\",\"eat\",\"tea\"],\n",
+    "  [\"nat\",\"tan\"],\n",
+    "  [\"bat\"]\n",
+    "]\n",
+    "\n",
+    "Note:\n",
+    "\n",
+    "All inputs will be in lowercase.\n",
+    "The order of your output does not matter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def groupAnagrams(self, strs):\n",
+    "        ana_dict = {};\n",
+    "        for i in strs:\n",
+    "            alpha_word = ''.join(sorted(i))\n",
+    "            if alpha_word in ana_dict.keys():\n",
+    "                ana_dict[alpha_word].append(i)\n",
+    "            else:\n",
+    "                ana_dict[alpha_word] = [i]                \n",
+    "        return [value for value in ana_dict.values()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = Solution()\n",
+    "words =  [\"eat\", \"tea\", \"tan\", \"ate\", \"nat\", \"bat\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.groupAnagrams(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n"
+     ]
+    }
+   ],
+   "source": [
+    "solu = sol.groupAnagrams(test)"
+   ]
   }
  ],
  "metadata": {
