--- a/leetcode2.ipynb
+++ b/leetcode2.ipynb
@@ -557,6 +557,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "# class ListNode(object):\n",
+    "#     def __init__(self, x):\n",
+    "#         self.val = x\n",
+    "#         self.next = None\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def hasCycle(self, head):\n",
+    "        \"\"\"\n",
+    "        :type head: ListNode\n",
+    "        :rtype: bool\n",
+    "        \"\"\"\n",
+    "          # sanity check: empty list has no cycle\n",
+    "        if head is None:\n",
+    "            return False\n",
+    "        \n",
+    "        slow = head\n",
+    "        fast = head.next\n",
+    "        \n",
+    "        # iterate fast poitner at twice the speed of the slow one\n",
+    "        while slow and fast and fast.next:\n",
+    "            # if a cycle exists, they will eventually meet\n",
+    "            if slow == fast:\n",
+    "                return True\n",
+    "            slow = slow.next\n",
+    "            fast = fast.next.next\n",
+    "        \n",
+    "        # we have gone through the linked list entirely\n",
+    "        # no cycle\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Happy Number\n",
+    "\n",
+    "Write an algorithm to determine if a number is \"happy\".\n",
+    "\n",
+    "A happy number is a number defined by the following process: Starting with any positive integer, replace the number by the sum of the squares of its digits, and repeat the process until the number equals 1 (where it will stay), or it loops endlessly in a cycle which does not include 1. Those numbers for which this process ends in 1 are happy numbers.\n",
+    "\n",
+    "Example: \n",
+    "\n",
+    "Input: 19\n",
+    "\n",
+    "Output: true\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "$12 + 92 = 82$\n",
+    "\n",
+    "$82 + 22 = 68$\n",
+    "\n",
+    "$62 + 82 = 100$\n",
+    "\n",
+    "$12 + 02 + 02 = 1$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def isHappy(self, n):\n",
+    "        seen = set()\n",
+    "        while n not in seen:\n",
+    "            seen.add(n)\n",
+    "            n = sum([int(x) **2 for x in str(n)])\n",
+    "        return n == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = Solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.isHappy(19)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
