stack and tree traversal

--- a/leetcode2.ipynb
+++ b/leetcode2.ipynb
@@ -665,6 +665,237 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Depth first search binary tree traversal - preorder, inorder, postorder \n",
+    "\n",
+    "         1\n",
+    "        /  |\n",
+    "       2   3\n",
+    "      / |  / |      \n",
+    "     4  5  6  7\n",
+    "               |\n",
+    "               8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-2-4-5-3-6-7-8-\n",
+      "4-2-5-1-6-3-7-8-\n",
+      "4-5-2-6-8-7-3-1-\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Node(object):\n",
+    "    \n",
+    "    def __init__(self, val):\n",
+    "        self.val = val\n",
+    "        self.left = None\n",
+    "        self.right = None       \n",
+    "       \n",
+    "class binaryTree(object):\n",
+    "    \n",
+    "    def __init__(self, root):\n",
+    "        self.root = Node(root)\n",
+    "        \n",
+    "    def printTree(self, traversal_type):\n",
+    "        if traversal_type == \"preorder\":\n",
+    "            return self.preorderPrint(tree.root, '')\n",
+    "        elif traversal_type == \"inorder\":\n",
+    "            return self.inorderPrint(tree.root, '')\n",
+    "        elif traversal_type == \"postorder\":\n",
+    "            return self.postorderPrint(tree.root, '')\n",
+    "        else:\n",
+    "            print(\"Traversal type {0} is not supported.\".format(traversal_type))\n",
+    "            return False\n",
+    "        \n",
+    "    def preorderPrint(self, start, traversal):\n",
+    "        # Root --> Left --> Right\n",
+    "       \n",
+    "        if start:\n",
+    "            traversal += (str(start.val) + \"-\")\n",
+    "            # recursive call\n",
+    "            traversal = self.preorderPrint(start.left, traversal)\n",
+    "            traversal = self.preorderPrint(start.right, traversal)\n",
+    "        \n",
+    "        return traversal        \n",
+    "        \n",
+    "    def inorderPrint(self, start, traversal):\n",
+    "    # Left --> Root --> Right\n",
+    "        if start:\n",
+    "            traversal = self.inorderPrint(start.left, traversal)\n",
+    "            traversal += (str(start.val) + '-')\n",
+    "            traversal = self.inorderPrint(start.right, traversal)\n",
+    "\n",
+    "        return traversal\n",
+    "    \n",
+    "    def postorderPrint(self, start, traversal):\n",
+    "        #Left --> Right --> Root\n",
+    "        if start:\n",
+    "            traversal = self.postorderPrint(start.left, traversal)\n",
+    "            traversal = self.postorderPrint(start.right, traversal)\n",
+    "            traversal += (str(start.val) + '-')\n",
+    "        \n",
+    "        return traversal\n",
+    "            \n",
+    "tree = binaryTree(1)\n",
+    "tree.root.left = Node(2)\n",
+    "tree.root.right = Node(3)\n",
+    "tree.root.left.left = Node(4)\n",
+    "tree.root.left.right = Node(5)\n",
+    "tree.root.right.left = Node(6)\n",
+    "tree.root.right.right = Node(7)\n",
+    "tree.root.right.right.right = Node(8)\n",
+    "print(tree.printTree(\"preorder\"))\n",
+    "print(tree.printTree(\"inorder\"))\n",
+    "print(tree.printTree(\"postorder\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stacks\n",
+    "D\n",
+    "\n",
+    "C\n",
+    "\n",
+    "B\n",
+    "\n",
+    "A\n",
+    "\n",
+    "push and popping\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "Stack is empty.\n",
+      "None\n",
+      "['A', 'B']\n",
+      "['A', 'B', 'C']\n",
+      "['A', 'B']\n",
+      "False\n",
+      "B\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Stack(object):\n",
+    "    def __init__(self):\n",
+    "        self.items = []\n",
+    "    \n",
+    "    def push(self, item):\n",
+    "        return self.items.append(item)\n",
+    "    \n",
+    "    def pop(self):\n",
+    "        return self.items.pop()\n",
+    "    \n",
+    "    def getStack(self):\n",
+    "        return self.items\n",
+    "    \n",
+    "    def empty(self):\n",
+    "        return self.items == []\n",
+    "    \n",
+    "    def peek(self):\n",
+    "        if not self.empty():\n",
+    "            return self.items[-1]\n",
+    "        else:\n",
+    "            print(\"Stack is empty.\")\n",
+    "\n",
+    "    \n",
+    "stack = Stack()\n",
+    "print(stack.empty())\n",
+    "print(stack.peek())\n",
+    "stack.push(\"A\")\n",
+    "stack.push(\"B\")\n",
+    "print(stack.getStack())\n",
+    "stack.push(\"C\")\n",
+    "print(stack.getStack())\n",
+    "stack.pop()\n",
+    "print(stack.getStack())\n",
+    "print(stack.empty())\n",
+    "print(stack.peek())    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Determine if parathesis are balanced using stack data structure.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def match(p1, p2):\n",
+    "    if p1 == \"{\" and p2 == \"}\":\n",
+    "        return True\n",
+    "    elif p1 == \"[\" and p2 == \"]\":\n",
+    "        return True\n",
+    "    elif p1 == \"(\" and p2 == \")\":\n",
+    "        return True\n",
+    "    \n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "def isParenBalanced(paren_string):\n",
+    "    stack = Stack()\n",
+    "    balanced = True\n",
+    "    index = 0\n",
+    "    while index < len(paren_string) and balanced == True:\n",
+    "        paren = paren_string[index]\n",
+    "        if paren in '({[':\n",
+    "            stack.push(paren)\n",
+    "        else:\n",
+    "            if stack.empty():\n",
+    "                balanced = False\n",
+    "            else:\n",
+    "                top = stack.pop()\n",
+    "                if match(top, paren) != True:\n",
+    "                    balanced = False\n",
+    "        index += 1\n",
+    "    \n",
+    "    if stack.empty() and balanced == True:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "        \n",
+    "\n",
+    "\n",
+    "print(isParenBalanced('(((({}))))'))        \n",
+    "print(isParenBalanced('[[]'))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
