--- a/leetcode1.ipynb
+++ b/leetcode1.ipynb
@@ -19,7 +19,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'oh oh oh ahahahah'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_string = 'hahahaha ho ho ho'\n",
+    "rev_my_sting = my_string[::-1]\n",
+    "rev_my_sting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -692,6 +714,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 383,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FizzBuzz(object):\n",
+    "   \n",
+    "    def __init__(self, num):        \n",
+    "        self.num = num\n",
+    "        \n",
+    "    \n",
+    "    def printer(self):\n",
+    "        for i in range(1, self.num + 1):\n",
+    "            if i%3 == 0 and i%5 == 0:\n",
+    "                print(\"FizzBuzz\")\n",
+    "            elif i%3 == 0:\n",
+    "                print(\"Fizz\")\n",
+    "            elif i%5 == 0:\n",
+    "                print(\"Buzz\")\n",
+    "            else:\n",
+    "                print(i)\n",
+    "fb = FizzBuzz(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "Fizz\n",
+      "4\n",
+      "Buzz\n",
+      "Fizz\n",
+      "7\n",
+      "8\n",
+      "Fizz\n",
+      "Buzz\n",
+      "11\n",
+      "Fizz\n",
+      "13\n",
+      "14\n",
+      "FizzBuzz\n",
+      "16\n",
+      "17\n",
+      "Fizz\n",
+      "19\n",
+      "Buzz\n",
+      "Fizz\n",
+      "22\n",
+      "23\n",
+      "Fizz\n",
+      "Buzz\n",
+      "26\n",
+      "Fizz\n",
+      "28\n",
+      "29\n",
+      "FizzBuzz\n"
+     ]
+    }
+   ],
+   "source": [
+    "fb.printer()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [],
@@ -738,6 +831,28 @@
    ],
    "source": [
     "sol.palindrome(121)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 368,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 368,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "end = 121%10\n",
+    "end\n",
+    "rev "
    ]
   },
   {
@@ -897,6 +1012,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeDups(nums):\n",
+    "    for i in range(len(nums) - 1 , 0, -1):\n",
+    "        if nums[i] == nums[i - 1]:\n",
+    "            del nums[i]\n",
+    "    return len(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "given_nums = [0,0,1,1,1,2,2,3,3,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "removeDups(given_nums)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1025,6 +1182,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def __init__(self):\n",
+    "        self = self\n",
+    "    \n",
+    "    def reverseWords(self, strs):\n",
+    "        rs = ''\n",
+    "        for word in reversed(strs.split()):\n",
+    "            rs += word + ' '\n",
+    "        return rs.rstrip()\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 367,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'example good a'"
+      ]
+     },
+     "execution_count": 367,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol = Solution()\n",
+    "s = \"a good   example\"\n",
+    "sol.reverseWords(s)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1070,11 +1267,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Boring solution\n",
     "class Solution:\n",
+    "    def __init__(self):\n",
+    "        self = self\n",
+    "        \n",
     "    def fib(self, n):\n",
     "        a, b = 0, 1\n",
     "        for i in range(1, n + 1):\n",
@@ -1085,16 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sol = Solution()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -1103,18 +1295,19 @@
        "1"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "sol = Solution()\n",
     "sol.fib(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1316,7 @@
        "2"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1336,101 @@
        "3"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 339,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.fib(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Dynamic programming solution\n",
+    "class Solution:\n",
+    "    def __init__(self):\n",
+    "        self = self\n",
+    "        \n",
+    "    def fib(self, num):\n",
+    "        num = num - 1\n",
+    "\n",
+    "        lst = []; f = 1\n",
+    "        lst.append(f); lst.append(f) \n",
+    "        while num >= f:\n",
+    "            f = lst[-1] + lst[-2]  \n",
+    "            lst.append(f)\n",
+    "        else:\n",
+    "            lst.remove(lst[-1]) \n",
+    "        \n",
+    "        return lst[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol = Solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 331,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.fib(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 332,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.fib(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 335,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 335,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,75 +1465,405 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def groupAnagrams(self, strs):\n",
-    "        ana_dict = {};\n",
-    "        for i in strs:\n",
-    "            alpha_word = ''.join(sorted(i))\n",
+    "class Solution(object):\n",
+    "    def __init__(self, strs):\n",
+    "        self.strs = strs\n",
+    "               \n",
+    "    def groupAnagrams(self):\n",
+    "        ana_dict = {}\n",
+    "        for word in self.strs:\n",
+    "            alpha_word = ''.join(sorted(word))\n",
     "            if alpha_word in ana_dict.keys():\n",
-    "                ana_dict[alpha_word].append(i)\n",
+    "                ana_dict[alpha_word].append(word)\n",
     "            else:\n",
-    "                ana_dict[alpha_word] = [i]                \n",
+    "                ana_dict[alpha_word] = [word]                \n",
     "        return [value for value in ana_dict.values()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sol = Solution()\n",
-    "words =  [\"eat\", \"tea\", \"tan\", \"ate\", \"nat\", \"bat\"]"
+    "words =  [\"eat\", \"tea\", \"tan\", \"ate\", \"nat\", \"bat\"]\n",
+    "sol = Solution(words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 0 ns\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sol.groupAnagrams(words)"
+    "sol.groupAnagrams()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 0 ns\n"
+      "Hello, Fred\n",
+      "HELLO, FRED!\n"
      ]
     }
    ],
    "source": [
-    "solu = sol.groupAnagrams(test)"
+    "class Greeter(object):\n",
+    "\n",
+    "    # Constructor\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name  # Create an instance variable\n",
+    "\n",
+    "    # Instance method\n",
+    "    def greet(self, loud=False):\n",
+    "        if loud:\n",
+    "            print('HELLO, %s!' % self.name.upper())\n",
+    "        else:\n",
+    "            print('Hello, %s' % self.name)\n",
+    "\n",
+    "g = Greeter('Fred')  # Construct an instance of the Greeter class\n",
+    "g.greet()            # Call an instance method; prints \"Hello, Fred\"\n",
+    "g.greet(loud=True)   # Call an instance method; prints \"HELLO, FRED!\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Sorter(object):\n",
+    "    def __init__(self, arr):\n",
+    "        #self = self\n",
+    "        self.arr = arr\n",
+    "    def quickSort(self):\n",
+    "        if len(self.arr) <= 1:\n",
+    "            return self.arr\n",
+    "        else:\n",
+    "            pivot = self.arr[len(self.arr) // 2]\n",
+    "            left = [x for x in self.arr if x < pivot]\n",
+    "            middle = [x for x in self.arr if x == pivot]\n",
+    "            right = [x for x in self.arr if x > pivot]\n",
+    "        return quickSort(left) + middle + quickSort(right)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some_nums = [3,6,8,10,1,2,1]\n",
+    "sorter = Sorter(some_nums)\n",
+    "sorter.quickSort()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def quickSort(arr):\n",
+    "\n",
+    "    if len(arr) <= 1:\n",
+    "        return arr\n",
+    "    else:\n",
+    "        pivot = arr[len(arr)// 2]\n",
+    "        left = [i for i in arr if i < pivot]\n",
+    "        middle = [i for i in arr if i == pivot]\n",
+    "        right = [i for i in arr if i > pivot]\n",
+    "\n",
+    "    return quickSort(left) + middle + quickSort(right)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "some_nums = [3,6,8,10,1,2,1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quickSort(some_nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def __init__(self):\n",
+    "        self = self\n",
+    "    def isValid(self, s):\n",
+    "        pair_dict = {\")\": \"(\", \n",
+    "                     \"}\": \"{\", \n",
+    "                     \"]\": \"[\"}\n",
+    "        stack = []\n",
+    "        for sym in s:\n",
+    "            if sym in pair_dict:\n",
+    "                top = stack.pop() if len(stack) != 0 else \"!\"\n",
+    "                \n",
+    "                if pair_dict[sym] != top:\n",
+    "                    return False\n",
+    "            else:\n",
+    "                stack.append(sym)\n",
+    "        \n",
+    "        return len(stack) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "some_string = \"()\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol = Solution()\n",
+    "sol.isValid(some_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some_string = \"()[]{}\"\n",
+    "sol.isValid(some_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some_string = \"(]\"\n",
+    "sol.isValid(some_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some_string = \"([)]\"\n",
+    "sol.isValid(some_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some_string = \"{[]}\"\n",
+    "sol.isValid(some_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given an array of integers where 1 ≤ a[i] ≤ n (n = size of array), some elements appear twice and others appear once.\n",
+    "\n",
+    "Find all the elements of [1, n] inclusive that do not appear in this array.\n",
+    "\n",
+    "Could you do it without extra space and in O(n) runtime? You may assume the returned list does not count as extra space.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input:\n",
+    "[4,3,2,7,8,2,3,1]\n",
+    "\n",
+    "Output:\n",
+    "[5,6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findDisappearedNumbers(self, nums):\n",
+    "        miss_nums = [0] * (len(nums) + 1)\n",
+    "        for i in nums:\n",
+    "            miss_nums[i] += 1\n",
+    "        return [i for i in range(1, len(miss_nums)) if miss_nums[i] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol= Solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "some_nums = [4,3,2,7,8,2,3,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6]"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol.findDisappearedNumbers(some_nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1265,7 +1882,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
